# rust-base83

./: Cargo.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: roundtrip.rs
src/: decode.rs  encode.rs  lib.rs
