[package]
name = "base83"
version = "0.1.0"
authors = ["Amrit Rathie <amrit.rathie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
alloc = []
std = ["thiserror"]
no_mangle = []

[dependencies]
thiserror = { version = "1.0.23", optional = true }
